manifest/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: redis
  name: golang-redis
spec:
  replicas: 5
  selector:
    matchLabels:
       app: golang-redis
  strategy: {}
  template:
    metadata:
      labels:
        app: golang-redis
    spec:
      containers:
      - image: chalut/golang-redis:latest
        name: golang-redis
        resources: {}
      imagePullSecrets:
      - name: dockersecret
      restartPolicy: Always
status: {}
