manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: redis
  name: golang-redis
spec:
  selector:
    matchLabels:
       app: golang-redis
  strategy: {}
  template:
    metadata:
      labels:
        app: golang-redis
    spec:
      containers:
      - image: chalut/golang-redis:latest
        imagePullPolicy: Always
        name: golang-redis
        hostAliases:
          - ip: "192.168.64.2"
            hostnames:
              - "redis.beebuddy.net"
        resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "150m"
      imagePullSecrets:
      - name: dockersecret
      restartPolicy: Always
status: {}
