manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: redis
  name: golang-redis
spec:
  type:
  selector:
    app: golang-redis
  ports:
    - port: 80
      targetPort: 8080
status:
  loadBalancer: {}
