manifest/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  namespace: redis
  name: golang-redis
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172900"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172900"
spec:
  rules:
  - host: golang-redis.beebuddy.net
    http:
      paths:
      - path: /
        backend:
          serviceName: golang-redis
          servicePort: 80
